--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -36,6 +36,7 @@ jobs:
           arduino-cli lib install "DHT sensor library"  # Installa librerie se necessarie
           arduino-cli lib install "sunset"  # Installa librerie se necessarie
           arduino-cli lib install "ClosedCube HDC1080"  # Installa librerie se necessarie
+          arduino-cli lib install "CAdafruit BMP280 Library"  # Installa librerie se necessarie
           
 
       - name: Compile Sketch
