--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -37,6 +37,7 @@ jobs:
           arduino-cli lib install "sunset"  # Installa librerie se necessarie
           arduino-cli lib install "ClosedCube HDC1080"  # Installa librerie se necessarie
           arduino-cli lib install "Adafruit BMP280 Library"  # Installa librerie se necessarie
+          arduino-cli lib install "SparkFun CCS811 Arduino Library"  # Installa librerie se necessarie
           
 
       - name: Compile Sketch
